Improved blog index (added excerpt, updated mockup pages accordingly)

--- a/_lorem/_posts/2013-07-09-post-long.md
+++ b/_lorem/_posts/2013-07-09-post-long.md
@@ -1,7 +1,8 @@
 ---
-title:  Lorem Ipsum (long post)
-layout: post
-tags:   lorem post long
+title:   Lorem Ipsum (long post)
+layout:  post
+tags:    lorem post long
+excerpt: This should look like typical long blog post.
 ---
 
 {% include lorem/long-text.txt %}      
