--- a/_lorem/_posts/2013-07-10-lorem.md
+++ b/_lorem/_posts/2013-07-10-lorem.md
@@ -1,5 +1,6 @@
 ---
-title:  Lorem Ipsum - Where is the Index?
-layout: default
+title:   Lorem Ipsum - Where is the Index?
+layout:  default
+excerpt:
 ---
 [Here](/lorem)
