--- a/demos/posts/some-orgmode-post.org
+++ b/demos/posts/some-orgmode-post.org
@@ -1,21 +1,31 @@
-<!-- 
-.. title: Test
-.. slug: test
-.. date: 2014/03/03 10:34:38
-.. tags: blog test, draft
+#+BEGIN_COMMENT
+.. title: Some Org-Mode Post
+.. slug:  
+.. date: 2014/03/04 14:01:23
+.. tags: nikola demo, draft
 .. link: 
 .. description: 
 .. type: text
--->
+.. is_page: False
+#+END_COMMENT
 
-# Lorem ipsum dolor sit amet
+
+*** Das ist ein Test
+
+asdalsda sadada adalösdöl asdalsödla
+
+#+begin_src c++
+  class Foo : Bar {
+    void run();
+  }
+#+end_src
+
+*** Ein zweite Überschrift
 
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
 nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
 sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-rebum. 
-
-# Stet clita kasd gubergren
+rebum.
 
 Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
 dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
@@ -23,3 +33,9 @@ elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
 magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
 justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
 takimata sanctus est Lorem ipsum dolor sit amet.
+
+
+*** .								   :noexport:
+;;; Local Variables:
+;;; eval: (org-indent-mode 1)
+;;; End:
